[package]
name = "open-entry-bindings"
version = "1.0.0"
edition = "2021"
authors = ["ProjectOpenEntry <muno9748@gmail.com>", "muno <muno9748@gmail.com>"]
repository = "https://github.com/Project-OpenEntry/OpenEntryVM-Bindings/"
description = "OpenEntry Bindings for extensions"
homepage = "https://github.com/Project-OpenEntry"
license = "MIT"

[dependencies]
tokio = { version = "1.18.2", features = ["rt", "rt-multi-thread", "time", "macros", "sync"] }
fast-async-mutex = "0.6.7"
libloading = "0.7.3"
async-ffi = "0.4.0"
paste = "1.0.7"